test/errors/functions/params_not_last_error.hy
// EXPECT_OUTPUT: params parameter must be the final parameter in the list
int bad(int a, params int[] rest, int b)
{
    return a
}
